--- a/jumbotron-narrow.css
+++ b/jumbotron-narrow.css
@@ -40,15 +40,15 @@ body {
 
 ._marketing{
 	background: #303030;
+	box-shadow: 0 0 1px #000;
 }
 
 /* Serach Room Style */
 #results{
 	height: 200px;
-	/*padding: 15px;*/
-	background: #303030;
+	background: #1d1d1d;
 	border-radius: 3px;
-	box-shadow: inset 0 0 5px #000;
+	border: 1px solid #1d1d1d;
 	overflow-y: scroll;
 }
 
@@ -57,10 +57,8 @@ body {
 	width: 100%;
 	height: 31px;
 	padding: 0 0 10px 10px;
-	border: 1px solid #303030;
+	border-bottom: 1px solid #303030;
 	line-height: 31px;
-	border-top: 0;
-	border-left: 0;
 	margin: 0;
 	font-weight: bold;
 }
@@ -88,10 +86,9 @@ body {
 	padding-left: 15px;
 	padding-bottom: 10px;
 	border-radius: 3px;
-	margin-top: 3px;
+	margin-top: 4px;
 	line-height: 22px;
 	font-weight: bold;
-	border-bottom: 1px solid #000;
 	margin-right: 10px;
 	position: relative;
 }
